--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Welcome to most popular hotel in kolkata">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/1a92f6e874.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="icon.png" type="image/x-icon">
     <title>Hotel KL | Home</title>
 
 </head>
