--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Welcome to most popular hotel in kolkata">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="mobile.css">
     <script src="https://kit.fontawesome.com/1a92f6e874.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="icon.png" type="image/x-icon">
     <title>Hotel KL | contact</title>
 
 </head>
@@ -48,11 +48,10 @@
     </section>
 
     <section id="contact-info" class="bg-dark">
-        <div class="container">
             <div class="box">
                 <i class="fas fa-hotel fa-3x"></i>
                 <h3>Location</h3>
-                <p>Kolkata</p>
+                <p>50 Main st, Boston MA</p>
             </div>
             <div class="box">
                 <i class="fas fa-phone fa-3x"></i>
@@ -64,7 +63,6 @@
                 <h3>Email Address</h3>
                 <p>frontdesk@hotelbt.co</p>
             </div>
-        </div>
     </section>
     <footer id="main_footer">
         <p>Hotel KL &copy; All rights reserved</p>
