--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     <section id="about_info">
         <div class="container">
             <div class="info_left">
-                <h1><span class="text-primary">About</span> Hote KoLkata</h1>
+                <h1><span class="text-primary">About</span> Hote KL</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates repudiandae incidunt quis culpa. Explicabo ex nostrum cumque provident placeat optio?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, vitae!</p> 
             </div>
