--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul>
                 <li class="current"><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <div id="showcase">
